[global]
quiet = 1

[metadata]
name = mlflow-migrate-utility
description = 
author = Yifan Wu
version = 0.0.1

[options]
zip_safe = True
packages = find:
include_package_data = True
install_requires =
    psycopg2-binary

[aliases]
release = clean --all bdist_wheel

[options.entry_points]
console_scripts =
    mmu=mlflow_migrate_utility.entry:main
    mlflow-migrate-utility=mlflow_migrate_utility.entry:main